--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "jon sibala",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mongodb": "^3.0.1",
+    "mongoose": "^5.0.0",
     "nodemon": "^1.14.7",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
